--- a/index-test.css
+++ b/index-test.css
@@ -1,8 +1,8 @@
 
 body {
-    max-width: 80%;
+    max-width: 70%;
     margin: auto;
-    border: solid lightgray 1px;    
+    border: solid red 2px;    
 }
 
 h1, p {
