--- a/index.css
+++ b/index.css
@@ -22,3 +22,13 @@ td {
 #inputbox {
     zoom: 2.0;
 }
+
+hr {
+    margin-top: 40px;
+}
+.footer {
+    font-size: 0.75rem;
+    font-family: sans-serif;
+    margin: 0.2rem;
+} 
+    
